changed style of tab-content, fix overflow-y which caused mal alignment of tabpanel

--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ a {
     margin-bottom:-1px;
 }
 .tab-content {
-    overflow-y:scroll;
-    /*height: 100%; */
+    /*overflow-y:scroll;
+    height: 100%; */
     border-left: 1px solid #ccc ; 
     border-right: 1px solid #ccc;
     border-top:1px solid #ccc;
